--- a/webknossos/tests/cassettes/test_api_client/test_health.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_health.yml
@@ -1,7 +1,7 @@
 http_interactions:
   - request:
       method: GET
-      path: /api/v9/health
+      path: /api/v10/health
       headers:
         host: localhost:9000
         accept: '*/*'
@@ -18,10 +18,12 @@ http_interactions:
       status:
         code: 200
       headers:
+        x-powered-by: Express
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Wed, 13 Aug 2025 11:21:30 GMT
+        date: Fri, 29 Aug 2025 15:43:36 GMT
+        connection: close
         content-type: text/plain; charset=UTF-8
         content-length: '2'
       body:
