--- a/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
+++ b/webknossos/tests/cassettes/test_api_client/test_generate_token_for_data_store.yml
@@ -23,11 +23,11 @@ http_interactions:
         cache-control: no-cache
         referrer-policy: origin-when-cross-origin, strict-origin-when-cross-origin
         x-permitted-cross-domain-policies: master-only
-        date: Fri, 29 Aug 2025 15:43:37 GMT
+        date: Fri, 29 Aug 2025 18:44:38 GMT
         connection: close
         content-type: application/json
         content-length: '34'
       body:
         encoding: utf8
-        data: '{"token":"o7L35jePbcDjymkqQUhOkw"}'
+        data: '{"token":"kUI1hHhNpH2ubb_eqMq8xg"}'
         compression: none
